Fatla el contacto

--- a/style.css
+++ b/style.css
@@ -41,3 +41,11 @@ h1.Elcafe{
     text-align: center;
     color: brown;
 }
+
+h3.marrones{
+    color: brown;
+}
+
+p.opinion{
+    color: brown;
+}
